make the users dynamque

--- a/html/php/test.html
+++ b/html/php/test.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <img src="../../html/images/" alt="">
+    <img src="../images/" alt="">
 </body>
 </html>
